--- a/Jenkins/파일에 대한 코멘트.md
+++ b/Jenkins/파일에 대한 코멘트.md
@@ -1,17 +1,17 @@
 필요한 파일들:
 
 1. Jenkins/jenkins-service.bat (배포 스크립트)
-Jenkins/k8s/jenkins-admin.yaml (RBAC 권한)
-Jenkins/k8s/jenkins-service.yaml (서비스 설정)
+2. Jenkins/k8s/jenkins-admin.yaml (RBAC 권한)
+3. Jenkins/k8s/jenkins-service.yaml (서비스 설정)
 4. Jenkins/k8s/jenkins-deployment.yaml (배포 설정)
 5. Jenkins/pipeline/Jenkinsfile (CI/CD 파이프라인)
 
+선택적 파일들:
 
-불필요한 파일들:
+1. Jenkins/k8s/ngrok-secret.yaml (GitHub 웹훅용)
+2. Jenkins/k8s/jenkins-config.yaml (추가 설정용)
 
-1. Jenkins/k8s/ngrok-secret.yaml (GitHub 웹훅용, 현재 불필요)
-Jenkins/k8s/jenkins-config.yaml (추가 설정용, 현재 불필요)
-Jenkins/k8s/jenkins-pv.yaml (영구 스토리지용, 현재는 emptyDir 사용)
-4. Jenkins/k8s/jenkins-ingress.yaml (Ingress 설정, 현재 불필요)
-
-일단은 현재 불필요해도 언젠가는 필요한 파일들이 될거 같아서 남겨둠.
+참고사항:
+- Jenkins는 worker2 노드에서 실행 (SonarQube와 함께)
+- 현재는 emptyDir 볼륨 사용
+- 필요시 PV/PVC로 변경 가능
